# down-with-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install-for-codex.sh  install.sh
arxiv-explorer/: README.md  arxiv_finder.py  pyproject.toml
doc-extractor/: README.md  extract_from_docs.py  pyproject.toml
rag-management/: README.md  pyproject.toml  rag_manager.py
