[project]
name = "doc-extractor"
version = "0.1.0"
description = "MCP server for extracting text, tables, and images from PDF and DOCX files"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.3",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["extract_from_docs"]

[dependency-groups]
dev = ["ruff>=0.4.0"]
