[project]
name = "rag-mcp"
version = "0.1.0"
description = "Local RAG MCP server using ChromaDB and Ollama embeddings"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.3",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "langchain-text-splitters>=0.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["rag_mcp"]

[dependency-groups]
dev = ["ruff>=0.4.0"]
